# prim-draft

./: CMakeLists.txt  README.md  azure-pipelines.yml
format/pecoff/: characteristics.c  coff.h  machines.c  machines.h
include/format/pecoff/: characteristics.h  coff.h  machines.h  magic.h  pe.h
include/platform/: types.h
platform/: types.h
src/: CMakeLists.txt
src/format/: CMakeLists.txt
src/format/pecoff/: CMakeLists.txt  characteristics.c  machines.c  magic.c
